Don't export the protobuf symbol (_upb_Arena_SlowMalloc_dont_copy_me__upb_internal_use_only)
Signed-off-by: Rueian Huang <rueiancsie@gmail.com>

--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -25,9 +25,10 @@ source:
     - patches/0007-patch-zlib-in-prometheus-cpp-and-boost.patch
     # Turns off --incompatible_strict_action_env
     - patches/0008-bazel-disable-strict-env.patch
+    - patches/0009-fix-symbols.patch
 
 build:
-  number: 0
+  number: 1
   skip:
     - match(python, "<3.11")
 
